apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-data-claim
      - name: syncthing
        persistentVolumeClaim:
          claimName: syncthing-data-claim
      securityContext:
        runAsUser: 3354
        runAsGroup: 3354
      containers:
      - name: app
        image: deluan/navidrome:latest@sha256:df22d661b8d0322c33754d999b567150df9e131a47ae53be71fed0154bf8cef5
        volumeMounts:
        - name: data
          mountPath: /data
        - name: syncthing
          mountPath: /music
          subPath: data/Music
          readOnly: true
        ports:
        - containerPort: 4533
