apps/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
  - port: 80
    targetPort: 4533
